Fix navigation links to use root-relative paths for Vercel cleanUrls and add 404 page

--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -40,15 +40,15 @@
                 </div>
             </div>
             <div class="nav-menu">
-                <a href="index.html" class="nav-menu-item">
+                <a href="/" class="nav-menu-item">
                     <img src="assets/icon-about me.png" alt="About me">
                     <span>About Me</span>
                 </a>
-                <a href="portfolio.html" class="nav-menu-item active">
+                <a href="/portfolio" class="nav-menu-item active">
                     <img src="assets/icon-portfolio.png" alt="Portfolio">
                     <span>Portfolio</span>
                 </a>
-                <a href="references.html" class="nav-menu-item">
+                <a href="/references" class="nav-menu-item">
                     <img src="assets/icon-references.png" alt="References">
                     <span>References</span>
                 </a>
@@ -65,15 +65,15 @@
         <!-- Mobile Menu Overlay -->
         <div class="mobile-menu-overlay" id="mobileMenuOverlay">
             <div class="mobile-menu-content">
-                <a href="index.html" class="mobile-menu-item">
+                <a href="/" class="mobile-menu-item">
                     <img src="assets/icon-about me.png" alt="About me">
                     <span>About Me</span>
                 </a>
-                <a href="portfolio.html" class="mobile-menu-item active">
+                <a href="/portfolio" class="mobile-menu-item active">
                     <img src="assets/icon-portfolio.png" alt="Portfolio">
                     <span>Portfolio</span>
                 </a>
-                <a href="references.html" class="mobile-menu-item">
+                <a href="/references" class="mobile-menu-item">
                     <img src="assets/icon-references.png" alt="References">
                     <span>References</span>
                 </a>
