Fix case study links to use clean URLs for Vercel deployment

--- a/website/portfolio.html
+++ b/website/portfolio.html
@@ -124,7 +124,7 @@
                     <img src="assets/cibc-logo.svg" alt="CIBC Logo" class="logo-image">
                 </div>
                 <div class="blurb-area">
-                    <a href="cibcmvprewardshub.html" class="section-title-link">
+                    <a href="/cibcmvprewardshub" class="section-title-link">
                         <p class="section-title">
                             I facilitated to design the <strong>MVP Rewards Hub</strong> and plan for the path forward to build a future state that aligns to the credit card team's loyalty goal and vision.
                         </p>
@@ -141,7 +141,7 @@
                     </p>
                 </div>
             </div>
-            <a href="cibcmvprewardshub.html" class="section-image-link">
+            <a href="/cibcmvprewardshub" class="section-image-link">
                 <div class="section-image">
                     <img src="assets/cibcHeroBanner.png" alt="CIBC MVP Rewards Hub">
                 </div>
@@ -155,7 +155,7 @@
                     <img src="assets/611f2f77cdba10ee32c83e2a3dd4ebb1aac602ac.svg" alt="CN Logo" class="logo-image">
                 </div>
                 <div class="blurb-area">
-                    <a href="shipmentrackuseradoption.html" class="section-title-link">
+                    <a href="/shipmentrackuseradoption" class="section-title-link">
                         <p class="section-title">
                             <strong>From Uncertainty to Understanding:</strong> Modernizing Shipment Tracking Through User Insight
                         </p>
@@ -173,7 +173,7 @@
                     </p>
                 </div>
             </div>
-            <a href="shipmentrackuseradoption.html" class="section-image-link">
+            <a href="/shipmentrackuseradoption" class="section-image-link">
                 <div class="section-image">
                     <img src="assets/CNCasestudycover.png" alt="CN Modernizing Shipment Visibility">
                 </div>
@@ -187,7 +187,7 @@
                     <img src="assets/bba38b016d74848427640ab4d57d6c3ef684a262.svg" alt="TO Live Logo" class="logo-image">
                 </div>
                 <div class="blurb-area">
-                    <a href="toliveredesign.html" class="section-title-link">
+                    <a href="/toliveredesign" class="section-title-link">
                         <p class="section-title">
                             <strong>Re-Design TO live's website:</strong> putting together a non-profit artistic community through stories, events promotion, and artists careers.
                         </p>
@@ -203,7 +203,7 @@
                     </p>
                 </div>
             </div>
-            <a href="toliveredesign.html" class="section-image-link">
+            <a href="/toliveredesign" class="section-image-link">
                 <div class="section-image">
                     <img src="assets/88029359d9babe9d7c7bcabfa5c9c6ef7754963e.png" alt="TO Live Website Re-Design">
                 </div>
@@ -217,7 +217,7 @@
                     <img src="assets/904e2b27da8c294e284a270cffc2ba6e48fe4abf.png" alt="MLSE Logo" class="logo-image">
                 </div>
                 <div class="blurb-area">
-                    <a href="mlsetradenfs.html" class="section-title-link">
+                    <a href="/mlsetradenfs" class="section-title-link">
                         <p class="section-title">
                             A platform for <strong>Maple Leafs fans to connect globally, visualize, share, and trade NFTs</strong> and exclusive merchandise in a fun and seamless way.
                         </p>
@@ -233,7 +233,7 @@
                     </p>
                 </div>
             </div>
-            <a href="mlsetradenfs.html" class="section-image-link">
+            <a href="/mlsetradenfs" class="section-image-link">
                 <div class="section-image">
                     <img src="assets/c04cfaaa2bc8e9329d536bc90195b5b417a24341.png" alt="MLSE Maple Leafs Fan Platform">
                 </div>
