Add password protection to case studies, update modal styling, add favicon, disable empty accordions, fix home.js phrases

--- a/website/404.html
+++ b/website/404.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Page not found - Andrés Rodríguez G. UX/UI Creative Designer">
     <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://andresrodriguez.net/404">
+    <link rel="icon" type="image/png" href="favicon.png">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7CY5G9TNG4"></script>
     <script>
