--- a/website/index.html
+++ b/website/index.html
@@ -15,6 +15,7 @@
     <meta name="twitter:title" content="Andrés Rodríguez G. - UX/UI Creative Designer">
     <meta name="twitter:description" content="Senior UX/UI Designer with 10+ years crafting intuitive, digital products.">
     <link rel="canonical" href="https://andresrodriguez.net/">
+    <link rel="icon" type="image/png" href="favicon.png">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7CY5G9TNG4"></script>
     <script>
@@ -91,7 +92,6 @@
                     <span class="hero-subtitle">UI/UX Creative Designer</span>
                 </h1>
                 <p class="hero-scramble-text"></p>
-                <script type="module" src="home.js"></script>
             </div>
             <div class="hero-polygon">
                 <video src="assets/3-d-objects-home.mp4" autoplay loop muted playsinline class="polygon-image"></video>
@@ -380,6 +380,7 @@ He's a proactive, curious, and talented designer who would be an asset to any te
     </footer>
 
     <script src="script.js"></script>
+    <script type="module" src="home.js"></script>
     <script src="about-me.js"></script>
     <script src="reviews-carousel.js"></script>
     <script src="mobile-menu.js"></script>
