--- a/website/references.html
+++ b/website/references.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://andresrodriguez.net/references.html">
     <link rel="canonical" href="https://andresrodriguez.net/references.html">
+    <link rel="icon" type="image/png" href="favicon.png">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7CY5G9TNG4"></script>
     <script>
